    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#2E2E2E" >
        
        <TextView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:background="#77A647"
            android:textColor="#FFFFFF"
            android:layout_margin="5dp"
            android:onClick="startNewGame" />
            
        <Button
            android:id="@+id/high_scores_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:background="#77A647"
            android:textColor="#FFFFFF"
            android:layout_margin="5dp" />
            
        <Button
            android:id="@+id/options_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:background="#77A647"
            android:textColor="#FFFFFF"
            android:layout_margin="5dp" />

    </LinearLayout>
